[package]
name = "network-sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "*"
sysinfo = "*"

[dependencies.windows]
version = "*"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_RemoteDesktop",
    "Win32_Networking_WinSock"
]