[package]
name = "network-sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "1.0.0"
sysinfo = "0.27.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_RemoteDesktop",
    "Win32_Networking_WinSock"
]